Fixes #261 issues with vertical alignment of checkboxes

--- a/src/modules/checkbox.less
+++ b/src/modules/checkbox.less
@@ -25,7 +25,7 @@
   display: inline-block;
 
   min-width: 1em;
-  height: 1.5em;
+  height: 1.25em;
   line-height: 1em;
 
   outline: none;
@@ -233,7 +233,6 @@
 .ui.slider.checkbox {
   cursor: pointer;
   min-width: 3em;
-  height: 2em;
 }
 
 /* Line */
@@ -358,7 +357,6 @@
 
 .ui.toggle.checkbox {
   cursor: pointer;
-  height: 2em;
 }
 
 .ui.toggle.checkbox .box,
